[gd_scene load_steps=30 format=3 uid="uid://dxwfy7y4add33"]

[ext_resource type="Script" path="res://title.gd" id="1_1cmfm"]
[ext_resource type="FontFile" uid="uid://be6q8glejura1" path="res://fonts/x12y16pxLineLinker.ttf" id="1_psv86"]
[ext_resource type="Script" path="res://StartLabel.gd" id="3_2h7si"]
[ext_resource type="Texture2D" uid="uid://mcamx3kdx0p2" path="res://textures/character.png" id="3_2iecd"]
[ext_resource type="Script" path="res://TitleCharacterAnimatedSprite2D.gd" id="4_r0jc4"]
[ext_resource type="AudioStream" uid="uid://cjlwqqmbehrka" path="res://sounds/start.mp3" id="6_pwjrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6k7jh"]
atlas = ExtResource("3_2iecd")
region = Rect2(864, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v18xr"]
atlas = ExtResource("3_2iecd")
region = Rect2(912, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8isj"]
atlas = ExtResource("3_2iecd")
region = Rect2(960, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrpb6"]
atlas = ExtResource("3_2iecd")
region = Rect2(1008, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_48256"]
atlas = ExtResource("3_2iecd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt3sh"]
atlas = ExtResource("3_2iecd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uho1m"]
atlas = ExtResource("3_2iecd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f47o8"]
atlas = ExtResource("3_2iecd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ubiv"]
atlas = ExtResource("3_2iecd")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5kvq"]
atlas = ExtResource("3_2iecd")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm5px"]
atlas = ExtResource("3_2iecd")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyxel"]
atlas = ExtResource("3_2iecd")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fppm"]
atlas = ExtResource("3_2iecd")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjtwr"]
atlas = ExtResource("3_2iecd")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0hm3"]
atlas = ExtResource("3_2iecd")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovc8x"]
atlas = ExtResource("3_2iecd")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhqva"]
atlas = ExtResource("3_2iecd")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqg73"]
atlas = ExtResource("3_2iecd")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ef3"]
atlas = ExtResource("3_2iecd")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl3eb"]
atlas = ExtResource("3_2iecd")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kbfg"]
atlas = ExtResource("3_2iecd")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h758"]
atlas = ExtResource("3_2iecd")
region = Rect2(816, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kuvaw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k7jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v18xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8isj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrpb6")
}],
"loop": true,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt3sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uho1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f47o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ubiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5kvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm5px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyxel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fppm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjtwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0hm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovc8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhqva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqg73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ef3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl3eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kbfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h758")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Title" type="Node2D"]
script = ExtResource("1_1cmfm")

[node name="TitleUI" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="TitleUI"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -76.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_psv86")
text = "YOZORA
MAKER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartLabel" type="Label" parent="TitleUI"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 44.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_psv86")
text = "CLICK START"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_2h7si")

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TitleCharacterAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(68, 120)
sprite_frames = SubResource("SpriteFrames_kuvaw")
autoplay = "default"
script = ExtResource("4_r0jc4")

[node name="StartSE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pwjrh")

[connection signal="timeout" from="GameStartTimer" to="." method="_on_game_start_timer_timeout"]
